# finite-element-toolkit

./: .gitignore  Makefile  README.md  example_000_cadquery.py  example_001_gmsh.py  example_002_mesh_fenics.py  example_003_pyvista.py  example_mesh_fenics.py  example_poisson.py  minimal_example.py  pixi.toml  pyproject.toml
.github/workflows/: build-and-deploy.yml  publish-quarto.yml  publish-theory.yml
results/: fundamentals.h5
results/fundamentals.bp/: md.0  md.idx  profiling.json
theory/: .gitignore  fenics_theory.tex
