
[project]
name = "au-fe-template"
version = "0.1"
requires-python = "==3.13.*"

dependencies = [
  "matplotlib",
  "jupyter",
  "cadquery>=2.3.0",
  "gmsh",
  "meshio",
  "mpi4py",
  "h5py>=3.16.0",
  "pyvista>=0.47.1",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
au-fe-template = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
fenics-dolfinx = ">=0.10.0,<0.11"
mpich = ">=4.3.2,<5"
